<resources>
    <string name="app_name">popEstimator</string>
    <string name="app_report_title">Population Estimates</string>
    <string name="action_settings">Settings</string>

    <string name="label_radial">Radial</string>
    <string name="label_drivetime">Drive-Time</string>
    <string name="label_miles">miles</string>
    <string name="label_minutes">minutes</string>

    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_aoidialog">Define Area Of Interest</string>

    <string name="select_minutes">Select minutes</string>
    <string name="select_drivetime">Select Drive time</string>
    <string name="set_miles">Set miles</string>
    <string name="select_radial">Set radius</string>

    <string name="saved_places">List of saved places</string>
    <string name="type_keyword">Type a key word</string>
    <string name="search_history">Search history</string>
    <string name="cancel_search">Cancel search</string>

    <string name="action_search_places">Search</string>
    <string name="search_saved_places">Search a place</string>
    <string name="action_my_places">Saved places</string>
    <string name="view_saved_places">View saved places</string>
    <string name="action_save">Save</string>
    <string name="save_report">Save report</string>
    <string name="action_share">Share</string>
    <string name="share_report">Share report</string>

    <string name="action_delete">Delete</string>
    <string name="delete_place">Delete a place</string>
    <string name="deleted">Location Deleted</string>
    <string name="my_location" translatable="false">>Go To My Location</string>

    <string name="prompt_connectivity">Please Check you Network or WiFi Connectivity</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <string name="counts">Counts</string>
    <string name="percentage">%</string>

    <string name="amerindian">American Indian</string>
    <string name="asian">Asian</string>
    <string name="black">Black</string>
    <string name="hispanic">Hispanic</string>
    <string name="pacislander">Pac. Islander</string>
    <string name="others">Others</string>
    <string name="white">White</string>
    <string name="widget_title">Population Estimates For</string>
    <string name="widget_desc">Widget for Population estimates</string>
    <string name="share_using">Share using:</string>
    <string name="nothing_added">Nothing Added. Incomplete data</string>
    <string name="added">Added</string>
    <string name="mile_radius">mile radius</string>
    <string name="minute_drive_time">minute drive time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_aoilog">AOILogActivity</string>

</resources>
