<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/widget">


    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/tint">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/cancel_search"
            style="?android:attr/buttonBarButtonStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/widget_subtitle"
            android:layout_toRightOf="@+id/logo"
            android:layout_toEndOf="@+id/logo"
            android:textColor="@color/primary_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/widget_subsubtitle"
            android:layout_below="@+id/widget_subtitle"
            android:layout_alignLeft="@+id/widget_subtitle"
            android:layout_alignStart="@+id/widget_subtitle"
            android:textColor="@color/primary_text"/>
        

    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:orientation="vertical"
        android:padding="@dimen/widget_margin"
        android:background="@color/icons">


        <TextView
            android:text="@string/amerindian"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:textColor="@color/primary_text"
            />
        <TextView
            android:id="@+id/amerindian1"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:gravity="center_vertical|end"
            android:layout_gravity="end"
            android:textColor="@color/primary_text"/>
        <TextView
            android:id="@+id/amerindian2"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:gravity="center_vertical|end"
            android:layout_gravity="end"
            android:textColor="@color/primary_text"/>

        <TextView
            android:text="@string/asian"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:textColor="@color/primary_text"
            />
        <TextView
            android:id="@+id/asian1"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:layout_gravity="end"
            android:textColor="@color/primary_text"/>
        <TextView
            android:id="@+id/asian2"
            android:layout_column="2"
            android:layout_row="1"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:layout_gravity="end"
            android:textColor="@color/primary_text"/>

        <TextView
            android:text="@string/black"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:textColor="@color/primary_text"
            />
        <TextView
            android:id="@+id/black1"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:layout_gravity="end"
            android:textColor="@color/primary_text"/>
        <TextView
            android:id="@+id/black2"
            android:layout_column="2"
            android:layout_row="2"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:layout_gravity="end"
            android:textColor="@color/primary_text"/>

        <TextView
            android:text="@string/hispanic"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:textColor="@color/primary_text"
            />
        <TextView
            android:id="@+id/hispanic1"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:layout_gravity="end"
            android:textColor="@color/primary_text"/>
        <TextView
            android:id="@+id/hispanic2"
            android:layout_column="2"
            android:layout_row="3"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:layout_gravity="end"
            android:textColor="@color/primary_text"/>

        <TextView
            android:text="@string/pacislander"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:textColor="@color/primary_text"
            />
        <TextView
            android:id="@+id/pacislander1"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:layout_gravity="end"
            android:textColor="@color/primary_text"/>
        <TextView
            android:id="@+id/pacislander2"
            android:layout_column="2"
            android:layout_row="4"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:layout_gravity="end"
            android:textColor="@color/primary_text"/>

        <TextView
            android:text="@string/others"
            android:layout_column="0"
            android:layout_row="5"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:textColor="@color/primary_text" />
        <TextView
            android:id="@+id/others1"
            android:layout_column="1"
            android:layout_row="5"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:layout_gravity="end"
            android:textColor="@color/primary_text"/>
        <TextView
            android:id="@+id/others2"
            android:layout_column="2"
            android:layout_row="5"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:layout_gravity="end"
            android:textColor="@color/primary_text"/>

        <TextView
            android:text="@string/white"
            android:layout_column="0"
            android:layout_row="6"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:textColor="@color/primary_text"
            />
        <TextView
            android:id="@+id/white1"
            android:layout_column="1"
            android:layout_row="6"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:layout_gravity="end"
            android:textColor="@color/primary_text"/>
        <TextView
            android:id="@+id/white2"
            android:layout_column="2"
            android:layout_row="6"
            android:layout_margin="@dimen/grid_margin_bottom"
            android:layout_gravity="end"
            android:textColor="@color/primary_text"/>

    </GridLayout>

</LinearLayout>